Pistachio Image Classification.ipynb

--- a/Pistachio Image Classification.ipynb
+++ b/Pistachio Image Classification.ipynb
@@ -5,7 +5,7 @@
    "id": "3fba1f25-6493-4567-933d-f187025c85b8",
    "metadata": {},
    "source": [
-    "# Pistachio Image Classification with CNN and Transfer Learning"
+    "# Pistachio Image Classification with CNN"
    ]
   },
   {
