Pistachio Image Classification.ipynb

--- a/Pistachio Image Classification.ipynb
+++ b/Pistachio Image Classification.ipynb
@@ -30,7 +30,7 @@
    "id": "d71bd499-8f14-4786-ba17-abbc537f5260",
    "metadata": {},
    "source": [
-    "### Import Libraries"
+    "### Import Libraries & Read Data"
    ]
   },
   {
@@ -182,6 +182,9 @@
      "metadata": {},
      "output_type": "execute_result"
     }
+   ], "source":
+  [
+   "### Preliminary Examination & Preprocessing"
    ],
    "source": [
     "df.head()"
